<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>advantech_patrol</name>
  <version>2.0.0</version>
  <description>ROS2 Humble patrol robot package with person detection</description>

  <maintainer email="yakirhuri@example.com">yakirhuri</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  
  <!-- Message and service dependencies -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <!-- Navigation dependencies -->
  <depend>nav2_msgs</depend>
  <depend>nav2_common</depend>
  
  <!-- TF2 dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Utility dependencies -->
  <depend>angles</depend>
  
  <!-- OpenCV dependency -->
  <depend>cv_bridge</depend>
  <depend>opencv4</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>